# The-Rust-Proxy

./: .gitignore  Api docs.md  Cargo.toml  README.md  config.toml  nixpacks.toml  rust-toolchain.toml  test.sh
frontend/: package-lock.json  package.json
frontend/src/: main.ts
src/: account_pool.rs  config.rs  direct.rs  filter.rs  load_monitor.rs  main.rs  models.rs  pool.rs  provider_proxies.rs  sakana.rs  scale_controller.rs  tor.rs  tor_manager.rs  usage.rs  utils.rs
src/api/: chat.rs  format.rs  health.rs  image.rs  messages.rs  mod.rs  models.rs  proxies.rs  tools.rs  usage.rs
src/providers/: freemodel.rs  groq.rs  mod.rs  openai_compat.rs  registry.rs  sakana.rs  types.rs  use_ai.rs
src/providers/faceb/: account.rs  http.rs  mod.rs  pool.rs  sse.rs
tor/: PUT TOR HERE.txt
