[package]
name = "leech-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging & config
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.14", features = ["toml"] }
dotenvy = "0.15"

# HTTP & WebSocket clients
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls", "cookies", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite = "0.24"
futures = "0.3"
tokio-socks = "0.5"

# Utilities
uuid = { version = "1", features = ["v4"] }
regex = "1"
base64 = "0.22"
chrono = "0.4"
rand = "0.8"
async-stream = "0.3"
once_cell = "1.19"
lazy_static = "1.4"
mime = "0.3"
which = "6.0"

# Error handling
anyhow = "1"
thiserror = "1"
